--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,3 @@
-html {
-  font-family: Inter, sans-serif;
-}
+@import "assets/styles/bootstrap-grid.css";
+@import "assets/styles/normalize.scss";
+@import "assets/styles/base.scss";
