--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -24,6 +24,7 @@ a {
 }
 
 ul {
+  margin: 0;
   padding: 0;
 }
 
@@ -50,89 +51,89 @@ ul {
 
   &-t {
     &-2 {
-      margin: 2px 0 0 0;
+      margin-top: 2px;
     }
 
     &-4 {
-      margin: 4px 0 0 0;
+      margin-top: 4px;
     }
 
     &-8 {
-      margin: 8px 0 0 0;
+      margin-top: 8px;
     }
 
     &-16 {
-      margin: 16px 0 0 0;
+      margin-top: 16px;
     }
 
     &-auto {
-      margin: auto 0 0 0;
+      margin-top: auto;
     }
   }
 
   &-r {
     &-2 {
-      margin: 0 2px 0 0;
+      margin-right: 2px;
     }
 
     &-4 {
-      margin: 0 4px 0 0;
+      margin-right: 4px;
     }
 
     &-8 {
-      margin: 0 8px 0 0;
+      margin-right: 8px;
     }
 
     &-16 {
-      margin: 0 16px 0 0;
+      margin-right: 16px;
     }
 
     &-auto {
-      margin: 0 auto 0 0;
+      margin-right: auto;
     }
   }
 
   &-b {
     &-2 {
-      margin: 0 0 2px 0;
+      margin-bottom: 2px;
     }
 
     &-4 {
-      margin: 0 0 4px 0;
+      margin-bottom: 4px;
     }
 
     &-8 {
-      margin: 0 0 8px 0;
+      margin-bottom: 8px;
     }
 
     &-16 {
-      margin: 0 0 16px 0;
+      margin-bottom: 16px;
     }
 
     &-auto {
-      margin: 0 0 auto 0;
+      margin-bottom: auto;
     }
   }
 
   &-l {
     &-2 {
-      margin: 0 0 0 2px;
+      margin-left: 2px;
     }
 
     &-4 {
-      margin: 0 0 0 4px;
+      margin-left: 4px;
     }
 
     &-8 {
-      margin: 0 0 0 8px;
+      margin-left: 8px;
     }
 
     &-16 {
-      margin: 0 0 0 16px;
+      margin-left: 16px;
     }
 
     &-auto {
-      margin: 0 0 0 auto;
+      margin-left: auto;
     }
   }
 }
