--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-  background: var(--clr-background);
+  background: var(--clr-surface);
   border: 1px solid var(--clr-border);
   border-radius: 2px;
   box-shadow: 0 2px 6px rgba(17, 17, 17, 0.07);
