feature/webappclient-1 Fix

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -63,7 +63,7 @@
       width: 100%;
 
       &-link {
-        background: var(--clr-background);
+        background: var(--clr-surface);
         display: flex;
         padding: 4px;
 
