feature/webappclient-2 Add Breadcrumbs UI component, Routing, HomePage

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -9,6 +9,7 @@
   --clr-on-danger: #FFFFFF;
   --clr-border: #CCCCCC;
   --clr-grey: #888888;
+  --clr-grey-light: #DDDDDD;
   --clr-black: #111111;
   --clr-disabled: #F6F6F6;
   --clr-info: #EEF5FF;
