--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,3 +1,18 @@
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.label {
+  color: var(--clr-grey);
+  font-size: 0.85rem;
+  font-weight: 800;
+  line-height: 1.33;
+  margin: 0 0 2px;
+}
+
 .input {
   border: 1px solid var(--clr-border);
   border-radius: 2px;
