feature/webappclient-4 Refactoring, fix cart

--- a/src/components/UI/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/UI/Breadcrumbs/Breadcrumbs.module.scss
@@ -35,3 +35,14 @@
     }
   }
 }
+
+@media (max-width: 575px) {
+  .breadcrumbs-container {
+    display: flex;
+    flex-direction: column;
+
+    &__item:not(:first-child)::before{
+      display: none;
+    }
+  }
+}
