--- a/src/components/pages/Catalog/ProductsOutput/ProductCard/ProductCard.module.scss
+++ b/src/components/pages/Catalog/ProductsOutput/ProductCard/ProductCard.module.scss
@@ -11,6 +11,15 @@
   transition: .3s;
   width: 100%;
 
+  &:hover {
+    color: var(--clr-primary);
+    filter: brightness(0.9);
+  }
+
+  &:active {
+    filter: brightness(0.8);
+  }
+
   &__image-wrapper {
     margin: 0 0 16px 0;
     padding-top: 66%;
@@ -22,7 +31,7 @@
     bottom: 0;
     left: 0;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     position: absolute;
     right: 0;
     top: 0;
@@ -36,15 +45,6 @@
     line-height: 1.21;
     font-weight: 400;
     margin: 0 0 8px;
-
-    &:hover {
-      color: var(--clr-primary);
-      filter: brightness(0.9);
-    }
-
-    &:active {
-      filter: brightness(0.8);
-    }
   }
 
   &__price {
@@ -59,6 +59,19 @@
     flex-shrink: 0;
     margin: 0 0 0 16px;
   }
+}
 
+@media (max-width: 575px) {
+  .card {
 
+    &__title {
+      margin: 8px 0;
+    }
+
+    &__image-wrapper {
+      margin: auto;
+      max-width: 240px;
+      padding-top: 44%;
+    }
+  }
 }
