--- a/src/components/pages/Auth/Auth.module.scss
+++ b/src/components/pages/Auth/Auth.module.scss
@@ -25,6 +25,17 @@
       filter: brightness(0.8);
     }
   }
+
+  &__error {
+    border: 1px solid var(--clr-danger);
+    border-radius: 2px;
+    background: #FEEFF0;
+    color: var(--clr-black);
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 8px 0 0;
+    padding: 10px 12px;
+  }
 }
 
 @media (max-width: 576px){
