Add Product add form

--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -18,7 +18,7 @@
   border-radius: 2px;
   color: var(--clr-grey);
   outline: none;
-  padding: 17px 16px 14px;
+  padding: 8px 4px 8px 8px;
   width: 100%;
 
   &:focus {
