--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -61,7 +61,7 @@ ul {
 
   &-t {
 
-    &-0{
+    &-0 {
       margin-top: 0;
     }
 
@@ -88,7 +88,7 @@ ul {
 
   &-r {
 
-    &-0{
+    &-0 {
       margin-right: 0;
     }
 
@@ -115,7 +115,7 @@ ul {
 
   &-b {
 
-    &-0{
+    &-0 {
       margin-bottom: 0;
     }
 
@@ -142,7 +142,7 @@ ul {
 
   &-l {
 
-    &-0{
+    &-0 {
       margin-left: 0;
     }
 
@@ -206,6 +206,146 @@ ul {
   &-r {
     &-0 {
       padding-right: 0;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .m {
+    &-auto {
+      margin: auto;
+    }
+
+    &-0 {
+      margin: 0;
+    }
+
+    &-2 {
+      margin: 2px;
+    }
+
+    &-4 {
+      margin: 4px;
+    }
+
+    &-8 {
+      margin: 8px;
+    }
+
+    &-16 {
+      margin: 16px;
+    }
+
+    &-t {
+      &-md {
+        &-0 {
+          margin-top: 0;
+        }
+
+        &-2 {
+          margin-top: 2px;
+        }
+
+        &-4 {
+          margin-top: 4px;
+        }
+
+        &-8 {
+          margin-top: 8px;
+        }
+
+        &-16 {
+          margin-top: 16px;
+        }
+
+        &-auto {
+          margin-top: auto;
+        }
+      }
+    }
+
+    &-r {
+      &-md {
+        &-0 {
+          margin-right: 0;
+        }
+
+        &-2 {
+          margin-right: 2px;
+        }
+
+        &-4 {
+          margin-right: 4px;
+        }
+
+        &-8 {
+          margin-right: 8px;
+        }
+
+        &-16 {
+          margin-right: 16px;
+        }
+
+        &-auto {
+          margin-right: auto;
+        }
+      }
+    }
+
+    &-b {
+      &-md {
+        &-0 {
+          margin-bottom: 0;
+        }
+
+        &-2 {
+          margin-bottom: 2px;
+        }
+
+        &-4 {
+          margin-bottom: 4px;
+        }
+
+        &-8 {
+          margin-bottom: 8px;
+        }
+
+        &-16 {
+          margin-bottom: 16px;
+        }
+
+        &-auto {
+          margin-bottom: auto;
+        }
+      }
+    }
+
+    &-l {
+      &-md {
+        &-0 {
+          margin-left: 0;
+        }
+
+        &-2 {
+          margin-left: 2px;
+        }
+
+        &-4 {
+          margin-left: 4px;
+        }
+
+        &-8 {
+          margin-left: 8px;
+        }
+
+        &-16 {
+          margin-left: 16px;
+        }
+
+        &-auto {
+          margin-left: auto;
+        }
+      }
     }
   }
 }
